--- a/templates/index.html
+++ b/templates/index.html
@@ -491,7 +491,7 @@
             <div class="row"><!-- row 6 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedinar.jpeg') }}"
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedinar.jpg') }}"
                              alt="Jakub Šedinár">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Jakub Šedinár</h3>
@@ -511,7 +511,7 @@
                 </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/mertus.jpeg') }}"
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/mertus.jpg') }}"
                              alt="Jakub Mertus">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Jakub Mertus</h3>
@@ -552,28 +552,28 @@
 {#                        </div><!-- Info end -->#}
 {#                    </div><!-- Speaker end -->#}
 {#                </div><!-- Speaker Col 1 end -->#}
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"
-                             alt="Placeholder">
-                        <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name"></h3>
-                            <p class="ts-speaker-designation"></p>
-                        </div><!-- Info end -->
-                    </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
-            </div>
-            <div class="row"><!-- row 7 start-->
+{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+{#                    <div class="ts-speaker transparent">#}
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"#}
+{#                             alt="Placeholder">#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name"></h3>#}
+{#                            <p class="ts-speaker-designation"></p>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Speaker end -->#}
+{#                </div><!-- Speaker Col 1 end -->#}
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/cimpersak.jpg') }}"
-                             alt="Mislav Cimperšak">
+                             alt="Mislav Cimperšak"/>
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Mislav Cimperšak</h3>
                             <p class="ts-speaker-designation">{{ _('Web developer, DevOps, manager') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div>
+            <div class="row"><!-- row 8 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"/>
@@ -587,16 +587,58 @@
                 </div><!-- Speaker Col 3 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hrabinova.jpg') }}"/>
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.jpg') }}"#}
-{#                             alt="Jorge Torres">#}
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hrabinova.jpg') }}"
+                             alt="Světlana Hrabinová">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Světlana Hrabinová</h3>
                             <p class="ts-speaker-designation">{{ _('UX designer and marketing specialist') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 7 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/frank.jpg') }}"
+                             alt="Tibor Frank"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Tibor Frank</h3>
+                            <p class="ts-speaker-designation">{{ _('Senior Python Developer and Tester') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 8 end -->
+
+            <div class="row"><!-- row 9 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/picard.jpg') }}"
+                             alt="Laurent Picard"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Laurent Picard</h3>
+                            <p class="ts-speaker-designation">{{ _('Passionate cloud technology and ML developer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/ritzer.jpg') }}"
+                             alt="Christoph Ritzer"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Christoph Ritzer</h3>
+                            <p class="ts-speaker-designation">{{ _('Software developer and blockchain expert') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"
+                             alt="Placeholder"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name"></h3>
+                            <p class="ts-speaker-designation"></p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+            </div><!-- Content row 9 end -->
 
         </div><!--/ Container end -->
     </section>
