--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -609,15 +609,15 @@
                                          'millennium. Apart for a little break to get his BSc in computational '
                                          'astrophysics, he has always been in the industry. As a technical evangelist '
                                          'with Auth0, he meets with developers to help them make the web a safer place.'
-                                         ' During his free time, he is usually found stargazing in a campsite somewhere'
-                                         'or brewing a fresh batch of beer in his garage.') }}
+                                         ' During his free time, he is usually found stargazing in a campsite '
+                                         'somewhere or brewing a fresh batch of beer in his garage.') }}
                                 </p>
                             </div>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('I Don\'t Care About Security (And Neither Should You)') }}</h4>
                                 <p> {{ _('Remember when setting up a login page was easy? It seems like nowadays it can '
-                                         'take weeks to start a project--creating a signup form, a login form, a '
-                                         'password recovery screen, and all the validation in between. And you haven’t '
+                                         'take weeks to start a project -- creating a signup form, a login form, a '
+                                         'password recovery screen, and all the validation in between. And you haven\'t '
                                          'even started on security considerations yet. During this presentation, the '
                                          'attendees will be introduced to OpenID Connect and OAuth. They will also '
                                          'learn how to leverage these technologies to create more secure applications. '
@@ -625,7 +625,7 @@
                                          'authentication so they can focus on their real work and forget about all '
                                          'that security stuff.') }}</p>
                                 <p>
-                                    {{ _('Besides this talk Joel is plannig a workshop on building a passwordless '
+                                    {{ _('Besides this talk Joel is planning a workshop on building a passwordless '
                                          'authentication server.') }} </p>
                             </div>
                         </div><!-- Info end -->
@@ -637,7 +637,7 @@
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
                         <div class="ts-speaker-image">
-                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedinar.jpeg') }}" />
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedinar.jpg') }}" />
                         </div><!--Image end -->
                     </div><!-- Col end -->
 
@@ -720,7 +720,7 @@
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
                         <div class="ts-speaker-image">
-                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/mertus.jpeg') }}" />
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/mertus.jpg') }}" />
                         </div><!--Image end -->
                     </div><!-- Col end -->
 
@@ -1073,8 +1073,146 @@
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
-                </div><!-- Speaker list 18 end -->
-            </div><!-- Speaker row 18 -->
+                </div><!-- Speaker list 20 end -->
+            </div><!-- Speaker row 20 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/frank.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Tibor Frank</h3>
+                            <p class="ts-speaker-designation">{{ _('Senior Python Developer and Tester') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="https://.github.io/"><i class="fa fa-github"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="https://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a></li>#}
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Senior Python developer and tester at Pantheon Technologies focused on '
+                                         'visualization and presentation of the test results.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Automated visualization and presentation of tests results') }}</h4>
+                                <p> {{ _('Thousands of performance tests run by tens of Jenkins jobs generate gigabytes '
+                                         'of data. It is not an easy task to provide it to our audience. But we do our '
+                                         'best. Data visualization is not only coding in Python, it is above all '
+                                         'finding the best way how to transform well structured but boring xml files '
+                                         'to fancy and informative graphs and tables. They must be beautiful, '
+                                         'gratifying, logical and functional like any good design and/or architecture.') }}</p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 21 end -->
+            </div><!-- Speaker row 21 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/picard.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Laurent Picard</h3>
+                            <p class="ts-speaker-designation">{{ _('Passionate cloud technology and ML developer') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="https://.github.io/"><i class="fa fa-github"></i></a></li>#}
+                                <li><a href="https://twitter.com/PicardParis"><i class="fa fa-twitter"></i></a></li>
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="https://www.linkedin.com/in/svetlanahrabinova/"><i class="fa fa-linkedin"></i></a></li>#}
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Laurent is a developer passionate about software, hardware, science, and '
+                                         'anything shaping the future. He works for Google where he ecstatically '
+                                         'explores cloud technologies. In a previous life, he pioneered the ebook '
+                                         'industry, co-created the first European ebook reader, and co-founded Bookeen. '
+                                         'He now enjoys sharing his passion in international conferences. You can find '
+                                         'him on Twitter at @PicardParis.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Building smarter solutions with Machine Learning, from magic to reality') }}</h4>
+                                <p> {{ _('“Any sufficiently advanced technology is indistinguishable from magic.” Well, '
+                                         'Machine Learning can look like magic, but you don\'t need to be a data '
+                                         'scientist or an ML researcher to develop with ML.') }} </p>
+                                <p> {{ _('So, what about making your solution smarter without any knowledge in AI? With '
+                                         'pre-trained models and a few lines of code, Machine Learning APIs can analyze '
+                                         'your data. Moreover, AutoML techniques can now help in getting even more '
+                                         'specific insights tailored to your needs.') }} </p>
+                                <p> {{ _('In this session, you\'ll see how to transform or extract information from '
+                                         'text, image, audio & video with the latest ML APIs, how to train an AutoML '
+                                         'custom model, and you\'ll be an active player of a live demo. Don\'t put your '
+                                         'smartphone in airplane mode!') }}</p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 22 end -->
+            </div><!-- Speaker row 22 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/ritzer.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Christoph Ritzer</h3>
+                            <p class="ts-speaker-designation">{{ _('Software developer and blockchain expert') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="https://github.io/"><i class="fa fa-github"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="https://www.linkedin.com/in//"><i class="fa fa-linkedin"></i></a></li>#}
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('I\'m a Vienna based software developer and blockchain expert. With an '
+                                         'academic background in the social sciences I have always been a programmer. '
+                                         'Starting out as a self-taught programming enthusiast at age fifteen I built '
+                                         'games and played with fun scripts until eventually I went on to become a '
+                                         'software developer by profession. Built the blockchain interacting '
+                                         'infrastructure in a fast growing start-up which I recently quit to start '
+                                         'again in an early stage start-up which aims to bring industry data to the '
+                                         'blockchain. Over my 15 years of writing code I have always been enthralled '
+                                         'by the idea of open source and contributed to a number of projects.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Intro to Blockchain with Python') }}</h4>
+                                <p> {{ _('This talk is structured into two parts of approximately equal length: ') }} </p>
+                                <p> {{ _('First an introduction to blockchains in general. Most have heard about blockchains '
+                                         'or bitcoin but how does it actually work and what is the technology driving '
+                                         'it? This talk will explain what a cryptocurrency wallet is, how transactions '
+                                         'are created and how they are brought together to form blocks that build the '
+                                         'blockchain. I will outline differences between the most widely used '
+                                         'implementations and the core technological concepts behind them, like '
+                                         'Proof-of-Work versus Proof-of-Stake, consensus algorithms, trustless '
+                                         'systems and the ideas behind them.') }}</p>
+                                <p> {{ _('In the second half of the talk I draw on my experience working with python in '
+                                         'my professional career and give an overview of the python ecosystem for '
+                                         'blockhain and cryptocurrency development. I will showcase some of the '
+                                         'libraries and tools that exist, like btcpy and highlight some of the pros '
+                                         'and cons (mostly pros) of using python in this sector.') }}</p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 22 end -->
+            </div><!-- Speaker row 22 -->
 
         </div>
     </section>
