--- a/templates/index.html
+++ b/templates/index.html
@@ -617,7 +617,7 @@
                             <p class="ts-speaker-designation">{{ _('Passionate cloud technology and ML developer') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/ritzer.jpg') }}"
@@ -627,35 +627,75 @@
                             <p class="ts-speaker-designation">{{ _('Software developer and blockchain expert') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/wirtel.jpg') }}"
-                             alt="Placeholder"/>
+                             alt="Stéphane Wirtel"/>
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Stéphane Wirtel</h3>
                             <p class="ts-speaker-designation">{{ _('Contributor of CPython, #fellow member of the PSF, '
                                                                    'EuroPython, AFPy and freelancer.') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 9 end -->
 
+            <div class="row"><!-- row 10 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/kokula.png') }}"
+                             alt="Radoslav Kokuľa"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Radoslav Kokuľa</h3>
+                            <p class="ts-speaker-designation">{{ _('Test Lead') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/fessl.jpg') }}"
+                             alt="Hans Christian Feßl"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Hans Christian Feßl</h3>
+                            <p class="ts-speaker-designation">{{ _('Applications and database manager') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/caceras.jpg') }}"
+                             alt="Anton Caceras"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name"></h3>
+                            <p class="ts-speaker-designation">{{ _('Software developer and PyCon organizer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+            </div><!-- Content row 10 end -->
 
-{#            <div class="row"><!-- row 9 start-->#}
-{#            #}
-{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
-{#                    <div class="ts-speaker transparent">#}
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"#}
-{#                             alt="Placeholder">#}
-{#                        <div class="ts-speaker-info">#}
-{#                            <h3 class="ts-speaker-name"></h3>#}
-{#                            <p class="ts-speaker-designation"></p>#}
-{#                        </div><!-- Info end -->#}
-{#                    </div><!-- Speaker end -->#}
-{#                </div><!-- Speaker Col 1 end -->#}
-{#                #}
-{#            </div>#}
+            <div class="row"><!-- row 11 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/tibarewala.jpg') }}"
+                             alt="Suryansh Tibarewala"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Suryansh Tibarewala</h3>
+                            <p class="ts-speaker-designation">{{ _('Python developer at booking.com') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sika.jpg') }}"
+                             alt="Ondrej Sika"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name"></h3>
+                            <p class="ts-speaker-designation">{{ _('Python & DevOps Engineer from Prague') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+            </div><!-- Content row 11 end -->
 
         </div><!--/ Container end -->
     </section>
