--- a/templates/index.html
+++ b/templates/index.html
@@ -695,6 +695,49 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/stehlik.png') }}"
+                             alt="Petr Stehlík"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Petr Stehlík</h3>
+                            <p class="ts-speaker-designation">{{ _('Python Engineer at Kiwi') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+            </div><!-- Content row 11 end -->
+
+            <div class="row"><!-- row 11 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dikshit.jpg') }}"
+                             alt="Kalyan Dikshit"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Kalyan Dikshit</h3>
+                            <p class="ts-speaker-designation">{{ _('Mozilla Tech Speaker') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/lewtak.jpg') }}"
+                             alt="Paweł Lewtak"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Paweł Lewtak</h3>
+                            <p class="ts-speaker-designation">{{ _('Python backend developer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/benko.jpg') }}"
+                             alt="František Benko"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">František Benko</h3>
+                            <p class="ts-speaker-designation">{{ _('SysAdmin Team Lead at Exponea') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
             </div><!-- Content row 11 end -->
 
         </div><!--/ Container end -->
