--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -1332,16 +1332,17 @@
                             </div>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('Think about the user') }}</h4>
-                                <p> {{ _('As developers, we a mainly focused on making things work. Business logic and '
-                                         'process analysis, reinventing the wheel and questioning every line of code '
-                                         'are what we do best. But when it comes to making this very complex systems '
-                                         'work for users, we are quickly frustrated, because it feels like they just '
-                                         'don\'t get it. As people of code, we are no longer regular users because we '
-                                         'understand what is going on behind the curtains of the big show that is '
-                                         'called a User Interface. What means, that by default, users have a totally '
-                                         'different experience then we developers do. In this talk, I want to extend '
-                                         'my lightning talk from last year to half an hour, to give you some tips on '
-                                         'how to get a users perspective on the user interface you want or have to create.') }}</p>
+                                <p> {{ _('As developers, we are mainly focused on making things work. Business logic '
+                                         'and process analysis, reinventing the wheel and questioning every line of '
+                                         'code are what we do best. But when it comes to making this very complex '
+                                         'systems work for users, we are quickly frustrated, because it feels like they'
+                                         ' just don\'t get it. As people of code, we are no longer regular users '
+                                         'because we understand what is going on behind the curtains of the big show '
+                                         'that is called a User Interface. What means, that by default, users have a '
+                                         'totally different experience then we developers do. In this talk, I want to '
+                                         'extend my lightning talk from last year to half an hour, to give you some '
+                                         'tips on how to get a users perspective on the user interface you want or have'
+                                         ' to create.') }}</p>
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
